# LLM-QA-Pipeline

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: evaluation_set.json
scripts/: ask_rag.py  check_eval_thresholds.py  compare_baseline.py  download_data.py  index_document.py  run_evaluation.py  run_qa.py
src/llm_qa/: __init__.py  factory.py
src/llm_qa/api/: jobs.py  main.py  schemas.py
src/llm_qa/chains/: ensemble_validator.py  example_bank.py  grounding.py  pipeline.py  prompts.py
src/llm_qa/config/: settings.py
src/llm_qa/core/: cost.py  document_loader.py  exceptions.py  llm_provider.py  logging_config.py
src/llm_qa/retrieval/: chunking.py  embeddings.py  retriever.py  vector_store.py
tests/: test_api.py  test_document_loader.py  test_pipeline.py  test_retrieval.py
