[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-qa-pipeline"
version = "1.0.0"
description = "Grounded question-answering pipeline with fact-checked iterative refinement."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alex Koh" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "pypdf>=4.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "chromadb>=0.5.0",
    # PyTorch dropped Intel-macOS (x86_64) builds after 2.2.2. On that platform,
    # pin torch and its ML stack to the last mutually-compatible versions;
    # everywhere else, float free on the latest.
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers<4.40; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sentence-transformers>=2.7.0,<3.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sentence-transformers>=2.7.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",        # required by FastAPI's TestClient
]

[project.scripts]
run-qa = "scripts.run_qa:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=llm_qa --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
packages = ["llm_qa"]
